--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   flutter_bounceable: ^1.1.0
   flashy_tab_bar2: ^0.0.10
   flutter_animate: ^4.5.0
+  awesome_snackbar_content: ^0.1.4
+  youtube_player_flutter: ^9.0.3
+  getwidget: ^4.0.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
