--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,10 +46,21 @@ dependencies:
   youtube_player_flutter: ^9.0.3
   getwidget: ^4.0.0
   intl: ^0.19.0
+  flutter_staggered_grid_view: ^0.7.0
+  font_awesome_flutter: ^10.7.0
+  flutter_inappwebview: any
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
+dependency_overrides:
+  flutter_inappwebview_android:
+    git:
+      url: https://github.com/holzgeist/flutter_inappwebview
+      path: flutter_inappwebview_android
+      ref: d89b1d32638b49dfc58c4b7c84153be0c269d057
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
