--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   font_awesome_flutter: ^10.7.0
   flutter_inappwebview: any
+  fl_chart: ^0.69.0
+  get: ^4.6.6
+  introduction_screen: ^3.1.14
 
 dev_dependencies:
   flutter_test:
