--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,11 +2,17 @@
 
 
     <uses-permission android:name="android.permission.INTERNET"/> 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:label="docment"
         android:name="${applicationName}"
         android:enableOnBackInvokedCallback="true"
+        android:requestLegacyExternalStorage="true"
         android:icon="@mipmap/ic_launcher">
+        
         
         <activity
             android:name=".MainActivity"
@@ -35,6 +41,8 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+             <activity android:name="com.yalantis.ucrop.UCropActivity" />
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
