--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,14 @@ dependencies:
   fl_chart: ^0.69.0
   get: ^4.6.6
   introduction_screen: ^3.1.14
+  image_picker: ^1.1.2
+  flutter_chat_ui: ^1.6.15
+  geolocator: ^13.0.1
+  file_picker: ^8.1.2
+  image_cropper: ^8.0.2
+  permission_handler: ^11.3.1
+  country_code_picker: ^3.0.0
+  intl_phone_field: ^3.2.0
 
 dev_dependencies:
   flutter_test:
