--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   permission_handler: ^11.3.1
   country_code_picker: ^3.0.0
   intl_phone_field: ^3.2.0
+  fluttertoast: ^8.2.8
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
